--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "cproto",
+  "name": "cdefs",
   "version": "0.1.1",
-  "description": "extract function prototypes in C source files to JSON.",
-  "main": "cproto.js",
+  "description": "describe c function prototypes in JSON.",
+  "main": "cdefs.js",
   "bin": {
     "proto": "./bin/cli.js"
   },
